<resources>
    <string name="app_name">Career Start</string>
    <string name="title_activity_projects">Projects</string>
    <string name="tab_text_1">Current</string>
    <string name="tab_text_2">Past</string>
    <string name="tab_text_3">Others</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_career_start">CareerStart</string>
    <string name="title_activity_main_student">MainStudentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muhammad Haseeb</string>
    <string name="nav_header_subtitle">mhseeb@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_project">My Project</string>
    <string name="menu_my_projects">My Projects</string>
    <string name="menu_all_projects">All Projects</string>
    <string name="menu_my_skills">My Skills</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_whats_new">Whats New</string>
    <string name="menu_about">About Us</string>
    <string name="title_activity_my_project">MyProjectActivity</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
    </string>
</resources>
