<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Skills">
        <menu>
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_class_black_24dp"
                android:title="@string/menu_my_skills" />
        </menu>
    </item>
    <item android:title="Projects">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_computer_black_24dp"
                android:title="@string/menu_my_project" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="@string/menu_all_projects" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_tools" />
        </menu>
    </item>

    <item android:title="Extras">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_new_releases_black_24dp"
                android:title="@string/menu_whats_new" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_local_cafe_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
