<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.careerstart.app.ui.student.ui.myprojects.MyProjectFragment"
        android:label="@string/menu_all_projects"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.careerstart.app.ui.student.ui.gallery.GalleryFragment"
        android:label="@string/menu_all_projects"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.careerstart.app.ui.student.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_my_skills"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.careerstart.app.ui.student.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.careerstart.app.ui.student.ui.share.ShareFragment"
        android:label="@string/menu_whats_new"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.careerstart.app.ui.student.ui.send.SendFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_send" />
</navigation>